[package]
name = "urlnano"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7.7", features = ["macros"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
tokio = { version = "1.23.0", features = ["full"] }
rand = "0.8.5"
async-trait = "0.1.83"
nanoid = "0.4.0"
